--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "dotenv": "^16.3.1",
     "graphql": "^16.8.0",
     "husky": "^8.0.3",
+    "mongodb": "^5.8.1",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
